Add New DB_Cinema, add New Records management, Add New File_Explorer, Add new Status and download tracker, modify the logs view and many more minors